--- a/common.css
+++ b/common.css
@@ -1,8 +1,18 @@
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
+  color: #333;
+  background: #f9f9f9;
+}
+
 header {
   background: #262626;
   color: #fff;
   text-align: center;
-  padding: 80px 20px;
+  padding: 20px;
   position: relative;
 }
 header h1 {
